# fomorian

./: .gitignore  LICENSE  README.md  fomorian.cabal  package.yaml  rebuildshaders.sh  stack.yaml
csrc/: SomeCode.c  VulkanCallback.c
resources/geometry/: single_tree.mtl
resources/shaders/: linez.frag  linez.vert  tutfrag.spv  tutorial.frag  tutorial.vert  tutvert.spv  unlit3d.frag  unlit3d.vert  unlit3dfrag.glsl  unlit3dfrag.spv  unlit3dvert.glsl  unlit3dvert.spv
src/: ConstraintExperiments.hs  Main.hs  ProcessWavefront.hs  Sample.hs  SampleFinal.hs  SceneFinal.hs  SceneNode.hs  SceneResources.hs  Windowing.hs
src/fomorian/: Common.hs  CommonSceneNodes.hs  GLBoundThread.hs  Main.hs  NeutralSceneTarget.hs  OpenGLCommand.hs  OpenGLResources.hs  PlatformRenderer.hs  ProcessWavefront.hs  Sample.hs  SampleFAlgebra.hs  SampleFinal.hs  SceneFAlgebra.hs  SceneFinal.hs  SceneNode.hs  SceneResources.hs  SimpleApp.hs  SimpleMemoryArena.hs  StorableLayout.hs  ThreadedApp.hs  Vulkan.hs  Windowing.hs
src/fomorian/OpenGL/: GLBoundThread.hs  OpenGLCommand.hs  OpenGLFlow.drawio  OpenGLResources.hs  PlatformRenderer.hs
src/fomorian/Vulkan/: DeviceMemoryAllocator.hs  DeviceMemoryTypes.hs  Example.hs  PlatformRenderer.hs  SwapChainEtc.hs  SwapchainBundle.hs  SwapchainCarousel.hs  TransientResources.hs  Vulkan.hs  VulkanCommandTree.hs  VulkanMonads.hs  VulkanResources.hs  VulkanTargetTree.hs  WindowBundle.hs  WindowEtc.hs
src/fomorian/Vulkan/Resources/: BoundCommandBuffer.hs  DataBuffers.hs  DescriptorSetHelper.hs  DescriptorSets.hs  DeviceMemoryAllocator.hs  DeviceMemoryTypes.hs  ImageBuffers.hs  Pipeline.hs  VulkanLoader.hs  VulkanResourcesBase.hs
src/fomorian/graphicsloaders/: ProcessWavefront.hs
test/: MemoryArenaTests.hs  Spec.hs
