cabal-version:  3.0
name:           fomorian
version:        0.1.0.0
category:       Web
homepage:       https://github.com/Izzimach/fomorian#readme
author:         Gary Haussmann
maintainer:     gjhaussmann@gmail.com
copyright:      2020 Gary Haussmann
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    README.md
    csrc/*.c


common deps
  ghc-options:         -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5,
                       constraints,
                       containers,
                       transformers,
                       hashable,
                       text,
                       generic-deriving,
                       generic-data,
                       data-fix,
                       recursion-schemes,
                       distributive,
                       vector,
                       groups,
                       generics-sop,
                       template-haskell,
                       GLFW-b,
                       GLUtil,
                       OpenGL >=3.0 && <4,
                       filepath,
                       ghc-prim,
                       linear,
                       mtl,
                       bytestring,
                       unordered-containers,
                       wavefront,
                       row-types,
                       JuicyPixels,
                       stm-loader,
                       stm,
                       async,
                       async-pool,
                       vulkan


library
  import: deps
  other-modules:
      Fomorian.CommonSceneNodes
      Fomorian.ProcessWavefront
      Fomorian.Sample
      Fomorian.SceneNode
      Fomorian.OpenGLCommand
      Fomorian.Windowing
      Fomorian.SceneResources
      Fomorian.SimpleApp
      Fomorian.OpenGLResources
  hs-source-dirs: src

executable example
  import: deps
  main-is: fomorian/Main.hs
  other-modules:
      Fomorian.CommonSceneNodes
      Fomorian.ProcessWavefront
      Fomorian.Sample
      Fomorian.SceneNode
      Fomorian.OpenGLCommand
      Fomorian.Windowing
      Fomorian.SceneResources
      Fomorian.SimpleApp
      Fomorian.OpenGLResources
  build-depends: vulkan
  hs-source-dirs: src
  c-sources: csrc/VulkanCallback.c
  include-dirs: /c/VulkanSDK/1.2.170.0/include


test-suite fomorian-test
  import:              deps
  build-depends:       hedgehog, hedgehog-corpus
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test, src
  other-modules:       Lib
  ghc-options:         -threaded -rtsopts