cabal-version:  3.0
name:           fomorian
version:        0.1.0.0
category:       Web
homepage:       https://github.com/Izzimach/fomorian#readme
author:         Gary Haussmann
maintainer:     gjhaussmann@gmail.com
copyright:      2020 Gary Haussmann
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    README.md
    csrc/*.c


common deps
  ghc-options:         -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5,
                       constraints,
                       containers,
                       transformers,
                       hashable,
                       text,
                       pretty-simple,
                       generic-deriving,
                       generic-data,
                       generics-sop,
                       HList,
                       data-fix,
                       recursion-schemes,
                       distributive,
                       vector,
                       groups,
                       template-haskell,
                       singletons,
                       GLFW-b,
                       filepath,
                       ghc-prim,
                       linear,
                       mtl,
                       bytestring,
                       unordered-containers,
                       wavefront,
                       freer-simple,
                       row-types,
                       JuicyPixels,
                       stm-loader,
                       stm,
                       async,
                       async-pool,
                       GLUtil,
                       OpenGL >=3.0 && <4,
                       vulkan


library
  import: deps
  other-modules:
      Fomorian.CommonSceneNodes
      Fomorian.NeutralSceneTarget
      Fomorian.PlatformRenderer
      Fomorian.SceneNode
      Fomorian.SceneResources
      Fomorian.SimpleMemoryArena
      Fomorian.ThreadedApp
      Fomorian.Windowing
      Fomorian.OpenGL.GLBoundThread
      Fomorian.OpenGL.OpenGLCommand
      Fomorian.OpenGL.OpenGLResources
      Fomorian.OpenGL.PlatformRenderer
      Fomorian.GraphicsLoaders.ProcessWavefront
      Fomorian.Vulkan.Resources.VulkanLoader
      Fomorian.Vulkan.Resources.DescriptorSetHelper
  hs-source-dirs: src

executable example
  import: deps
  main-is: Main.hs
  other-modules:
      Fomorian.CommonSceneNodes
      Fomorian.GraphicsLoaders.ProcessWavefront
      Fomorian.NeutralSceneTarget
      Fomorian.OpenGL.GLBoundThread
      Fomorian.OpenGL.OpenGLCommand
      Fomorian.OpenGL.OpenGLResources
      Fomorian.OpenGL.PlatformRenderer
      Fomorian.PlatformRenderer
      Fomorian.SceneNode
      Fomorian.SceneResources
      Fomorian.SimpleMemoryArena
      Fomorian.ThreadedApp
      Fomorian.Windowing
  build-depends: vulkan
  hs-source-dirs: src
  c-sources: csrc/VulkanCallback.c
  ghc-options: -threaded -rtsopts
  include-dirs: /c/VulkanSDK/1.2.170.0/include


test-suite fomorian-test
  import:              deps
  build-depends:       hedgehog, hedgehog-corpus
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test, src
  other-modules:       Lib
  ghc-options:         -threaded -rtsopts